@@ -6,7 +6,6 @@ spam_level: 5
 reply_all : 0
 mailto_link: 0
 umask: 022
-email_comment: >
 email_header: 0
 trac_version: 0.10
 enable_syslog : 1
@@ -14,6 +13,8 @@ alternate_notify_template :
 drop_spam : 0
 verbatim_format: 1
 strip_signature: 0
+email_quote: >
+strip_quotes: 0
 
 
 [bas]
